# gnome-klotski

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  gnome-klotski.doap  gnotski.c  gnotski.desktop  gnotski.desktop.in  gnotski.desktop.in.in  gnotski.schemas.in  meson.build  pieces.h
build-aux/: org.gnome.Klotski.json
data/: Makefile.am  gnome-klotski.6  gnome-klotski.appdata.xml  gnome-klotski.appdata.xml.in  gnome-klotski.desktop.in  gnome-klotski.desktop.in.in  gnotski.6  gnotski.desktop.in.in  gnotski.schemas.in  klotski-menus.ui  klotski-scores.ui  klotski.css  klotski.ui  meson.build  org.gnome.Klotski.appdata.xml.in  org.gnome.Klotski.desktop.in  org.gnome.Klotski.gschema.xml  org.gnome.Klotski.service.in  org.gnome.gnotski.gschema.xml.in  org.gnome.klotski.gschema.xml  org.gnome.klotski.gschema.xml.in
data/icons/: Makefile.am
data/icons/HighContrast/: Makefile.am
data/icons/hicolor/: Makefile.am
data/ui/: help-overlay.ui  klotski.ui
help/: .gitignore  ChangeLog  ChangeLog.old  LINGUAS  Makefile.am  gnotski.omf.in  meson.build
help/C/: .cvsignore  Makefile.am  game-introduction.page  gnotski-C.omf  gnotski.xml  index.docbook  index.page  introduction.page  keyboard-shortcuts.page  moves.page  puzzles-moves.page  puzzles.page  rules.page  scores.page  shortcuts.page  start-game.page  start.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po  gnotski.xml  legal.xml
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/it/: it.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  (+53 more)
src/: Makefile.am  config.vapi  games-fullscreen-action.c  games-preimage.c  games-scores-backend.c  games-scores-backend.h  games-scores-dialog.c  games-scores.c  games-scores.h  games-setgid-io.c  games-stock.c  gnome-klotski.c  gnome-klotski.vala  gnotski.c  history.vala  klotski-window.vala  klotski.gresource.xml  meson.build  pieces.h  puzzle-view.vala  puzzle.vala  score-dialog.vala
