@YELP_HELP_RULES@

HELP_ID = tali
HELP_MEDIA = \
  figures/logo32.png \
  figures/logo.png
HELP_FILES = \
  index.page \
  rules.page \
  puzzles.page \
  start-game.page \
  scores.page \
  puzzles-moves.page \
  moves.page \
  scores.page \
  game-introduction.page \
  shortcuts.page \
  legal.xml

HELP_LINGUAS = 

-include $(top_srcdir)/git.mk