@YELP_HELP_RULES@

HELP_ID = tali
HELP_MEDIA = \
  figures/logo32.png \
  figures/logo.png
HELP_FILES = \
  index.page \
  introduction.page \
  keyboard-shortcuts.page \
  legal.xml \
  moves.page \
  puzzles.page \
  rules.page \
  scores.page \
  start.page

HELP_LINGUAS =

-include $(top_srcdir)/git.mk
