@YELP_HELP_RULES@

HELP_ID = gnome-klotski

HELP_FILES = \
	index.page \
	introduction.page \
	keyboard-shortcuts.page \
	legal.xml \
	moves.page \
	puzzles.page \
	rules.page \
	scores.page \
	start.page

HELP_MEDIA = \
	media/logo32.png \
	media/logo.png

HELP_LINGUAS = es

-include $(top_srcdir)/git.mk
